<resources>
    <string name="app_name">Repeater</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_set_as_start">Set As Start</string>
    <string name="action_set_as_end">Set As End</string>
    <string name="action_repeat_last_sentence">Repeat Last Sentence</string>
    <string name="default_time">0:00</string>
</resources>
